--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <html>
     <head>
+        <meta charset="utf-8">
+         <meta name="viewport" content="width=device-width, initial-scale=1"> 
+         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> 
+         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js">  </script>
+         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"> </script>
+         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
         <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Lobster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Lobster&display=swap" rel="stylesheet">
@@ -9,17 +16,25 @@
 <link rel="stylesheet" href="NeilA.css">
     </head>
 <body>
-    <center>
-    <ul class="menu">
-        <li class="links"><a href="#NAwel">INICIO
-            <li class="links"><a href="#NAbio">BIOGRAFIA
-                <li class="links"><a href="#NAvid">VIDEOS
-                    <li class="links"><a href="#NAbajo">TRABAJO
-                        <li class="links"><a href="#NAtext">TEXTOS
-                            <li class="links"><a href="#NAfoto">FOTOS
-                                <li class="links"><a href="#NAcon">CONTACTO
-    </ul>
-    </center>
+    <nav class="navbar-inverse my_nav_bar">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar"> 
+              <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> 
+            </button>
+            <a class="navbar-brand" href="https://www.youtube.com/watch?v=oRGDhgITetc"> autor Camilo :) </a>
+        </div>
+        <div class="collapse navbar-collapse" id="mynavbar">
+            <ul class="nav navbar-nav">
+                <li ><a href="#NAwel">INICIO </a></li>
+                    <li ><a href="#NAbio">BIOGRAFIA </a></li>
+                        <li ><a href="#NAvid">VIDEOS </a></li>
+                            <li ><a href="#NAbajo">TRABAJO </a></li>
+                                <li ><a href="#NAtext">TEXTOS </a></li>
+                                    <li ><a href="#NAfoto">FOTOS </a></li>
+                                        <li ><a href="#NAcon">CONTACTO </a></li>
+                                        </ul>  
+        </div>  
+    </nav>
 <section id="NAwel" class="parallax-container">
 <div class="parallax-inner">
     <img src="http://t0.gstatic.com/licensed-image?q=tbn:ANd9GcRuHZvwb_nh6aWDM5gwoGfXsA_EykQeCZXOBpNgi673ze7aFqxaHF6nA-z6O20iwmHf" class="NAwel2">
